logstash/logstash.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
spec:
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      hostname: logstash
      containers:
      - name: logstash
        ports:      
          - containerPort: 9600
            name: logstash
        image: docker.elastic.co/logstash/logstash:7.5.0
        volumeMounts:
        # - name: config-volume
        #   mountPath: /usr/share/logstash/config/
        - name: logstash-config
          mountPath: /usr/share/logstash/pipeline/
        - name: logstash-persistent-storage
          mountPath: /logstash
        command:
        - /bin/bash
        - -exec
        - |
          cd /usr/share/logstash/config
          sed -i 's/elasticsearch:9200/elasticsearch-master:9200/g' logstash.yml
          logstash
        resources:
          requests:
            cpu: 50m
            memory: 70M
          limits:
            cpu: 1000m
            memory: 2500M
      volumes:
      # Previously defined ConfigMap object.
      # - name: config-volume
      #   configMap:
      #     name: logstash-config
      #     items:
      #       - key: logstash.yml
      #         path: logstash.yml
      - name: logstash-config
        configMap:
          name: logstash-config
          items:
          - key: logstash.conf
            path: logstash.conf
      - name: logstash-persistent-storage
        persistentVolumeClaim:
          claimName: logstash-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: logstash
spec:
  selector:
    app: logstash
  ports:  
    - protocol: "TCP"
      port: 9600
  type: ClusterIP
